syntax = "proto3";

package helloworld;

service Greeter {
  // Defines a single method in the service: SayHello
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

